# radixInfer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: README.md  bench_e2e.py  plot_results.py  run_bench.sh
docs/: api-guide.md  architecture.md  developer-guide.md  development.md
python/radixinfer/: __init__.py  bench.py  config.py  core.py  env.py  llm.py  serve.py  shell.py
python/radixinfer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/radixinfer/api/: __init__.py  rendering.py  schemas.py  server.py
python/radixinfer/cache/: __init__.py  kv_pool.py  page_pool.py  prefix_store.py
python/radixinfer/distributed/: __init__.py  impl.py  info.py
python/radixinfer/engine/: __init__.py  attention.py  base.py  config.py  dummy.py  engine.py  graph.py  hf.py  sample.py
python/radixinfer/engine/attention/: __init__.py  base.py  fa.py  fi.py  utils.py
python/radixinfer/kernel/: __init__.py
python/radixinfer/kernel/triton/: fused_moe.py
python/radixinfer/layers/: __init__.py  activation.py  attention.py  base.py  embedding.py  linear.py  moe.py  norm.py  rotary.py
python/radixinfer/models/: __init__.py  _decoder.py  base.py  config.py  llama.py  mistral.py  qwen2.py  qwen3.py  qwen3_moe.py  register.py  utils.py  weight.py
python/radixinfer/moe/: __init__.py  fused.py
python/radixinfer/runtime/: __init__.py  cache_manager.py  decode.py  executor.py  io.py  planner.py  prefill.py  scheduler.py  scheduler_config.py  table.py  types.py  utils.py
python/radixinfer/server/: __init__.py  common.py  frontend.py
python/radixinfer/transport/: __init__.py  detokenize.py  protocol.py  queues.py  tokenizer_backend.py  tokenizer_worker.py
python/radixinfer/utils/: __init__.py  hf.py  logger.py  misc.py  mp.py  torch_utils.py
tests/: test_api_helpers.py  test_api_server.py  test_cache_materialization.py  test_engine_cache_consumption.py  test_hf_engine.py  test_llm.py  test_multiprocess_server.py  test_page_pool.py  test_planner.py  test_prefix_store.py  test_scheduler_runtime.py  test_tokenizer_backend.py
