[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radixinfer"
version = "0.1.0"
description = "Refactored LLM serving skeleton inspired by mini-sglang."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pyzmq",
  "torch",
  "transformers>=4.40",
  "uvicorn",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
