[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radixinfer"
version = "0.1.0"
description = "Layered LLM serving codebase with a runnable end-to-end control plane."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pyzmq",
  "torch",
  "transformers>=4.40",
  "uvicorn",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_multiprocess_server.py --ignore=tests/test_api_server.py"
markers = [
  "integration: slow tests that start real server processes (deselect with -m 'not integration')",
]
