[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radixinfer"
version = "0.1.0"
description = "Layered LLM serving codebase with a runnable end-to-end control plane."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "radixInfer contributors"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi",
  "pyzmq",
  "torch",
  "transformers>=4.40",
  "uvicorn",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "mypy>=1.8",
  "ruff>=0.5.0",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "W",
  "F",
  "I",
  "C4",
]
ignore = [
  "E501",
  "C901",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_multiprocess_server.py --ignore=tests/test_api_server.py"
markers = [
  "integration: slow tests that start real server processes (deselect with -m 'not integration')",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
